# CursorForge

./: .gitignore  LICENSE  README.md  cursorforge.spec  pyproject.toml
.github/workflows/: release.yml
packaging/: build-packages.sh  cursorforge.desktop  nfpm-arch.yaml  nfpm-deb.yaml  nfpm-rpm.yaml
packaging/appimage/: AppImageBuilder.yml
packaging/arch/: PKGBUILD
packaging/scripts/: postinstall.sh  postremove.sh
src/cursorforge/: __init__.py  __main__.py  app.py  builder.py  compiler.py  dependencies.py  distro.py  extractor.py  inspector.py  metadata.py  models.py  paths.py  root_build.py  scaler.py  scanner.py  validator.py
src/cursorforge/ui/: dependency_dialog.py  main_window.py  progress_dialog.py  size_panel.py  theme_panel.py
tests/: test_builder.py  test_compiler.py  test_config_parser.py  test_hotspot_scaling.py  test_metadata.py  test_root_build.py  test_scaler.py  test_size_selection.py  test_theme_scanner.py  test_validator.py
