[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cursorforge"
version = "0.1.2"
description = "Add additional sizes to installed Xcursor themes"
requires-python = ">=3.12"
license = { text = "GPL-3.0-or-later" }
dependencies = [
    "PySide6>=6.6",
]

[project.scripts]
cursorforge = "cursorforge.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cursorforge"]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.4",
    "mypy>=1.10",
    "PySide6-stubs>=6.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
